Basic working calculator

--- a/simple-calc/simple-calc/Base.lproj/Main.storyboard
+++ b/simple-calc/simple-calc/Base.lproj/Main.storyboard
@@ -231,6 +231,16 @@
                                     <action selector="operatorPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3Jr-tU-dpB"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="db9-H6-ZV2">
+                                <rect key="frame" x="284" y="14" width="80" height="80"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="34"/>
+                                <state key="normal" title="C">
+                                    <color key="titleColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="clear:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BuL-hX-bFL"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
